crates/fhirpath/src/snapshots/oxidized_fhirpath__parser__tests__operations-2.snap
---
source: crates/fhirpath/src/parser.rs
expression: result
---
Singular(
    [
        ExternalConstant(
            "test",
        ),
        Invocation(
            Identifier(
                Identifier(
                    "asdf",
                ),
            ),
        ),
    ],
)
