crates/fhirpath/src/snapshots/oxidized_fhirpath__parser__tests__operations-3.snap
---
source: crates/fhirpath/src/parser.rs
expression: result
---
Operation(
    Add(
        Singular(
            [
                ExternalConstant(
                    "test",
                ),
                Invocation(
                    Identifier(
                        Identifier(
                            "field",
                        ),
                    ),
                ),
            ],
        ),
        Singular(
            [
                Invocation(
                    This,
                ),
                Invocation(
                    Identifier(
                        Identifier(
                            "value",
                        ),
                    ),
                ),
            ],
        ),
    ),
)
