crates/fhirpath/src/snapshots/oxidized_fhirpath__parser__tests__operations-6.snap
---
source: crates/fhirpath/src/parser.rs
expression: result
---
Operation(
    Add(
        Operation(
            Polarity(
                Negative,
                Singular(
                    [
                        Invocation(
                            This,
                        ),
                        Invocation(
                            Identifier(
                                Identifier(
                                    "field",
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Singular(
            [
                ExternalConstant(
                    "test",
                ),
                Invocation(
                    Identifier(
                        Identifier(
                            "_asdf",
                        ),
                    ),
                ),
                Invocation(
                    Function(
                        FunctionInvocation {
                            name: Identifier(
                                "test",
                            ),
                            arguments: [],
                        },
                    ),
                ),
            ],
        ),
    ),
)
