crates/fhirpath/src/snapshots/oxidized_fhirpath__parser__tests__type_operations.snap
---
source: crates/fhirpath/src/parser.rs
expression: result
---
Operation(
    Is(
        Operation(
            Add(
                Singular(
                    [
                        Literal(
                            Integer(
                                1,
                            ),
                        ),
                    ],
                ),
                Singular(
                    [
                        Literal(
                            Integer(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
        QualifiedIdentifier(
            [
                Identifier(
                    "Patient",
                ),
            ],
        ),
    ),
)
